--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,7 +15,7 @@
 	<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top my-sm-3">
 		<ul class="navbar-nav">
 			<li class="nav-item"><a class="nav-link">Hello, <%= user.username %></a></li>
-	    <li class="nav-item"><a href="/fav/<%= user.username %>" class="nav-link text-success">Favourote List</a></li>
+	    <li class="nav-item"><a href="/fav" class="nav-link text-success">Favourote List</a></li>
 			<li class="nav-item"><a href="/logout" class="nav-link text-danger">Logout</a></li>
 		</ul>
 	</nav>
