--- a/views/home.ejs
+++ b/views/home.ejs
@@ -33,12 +33,12 @@
 <div class="container">
 	<h2 class="text-left">Places</h2>
 	<table id="myTable" class="table table-striped table-hover">
-    <thead class="thead-dark">
+    			<thead class="thead-dark">
 		<tr>
 			<th onclick="sortTable(0)">ID</th>
-      <th onclick="sortTable(1)">Name</th>
+  			<th onclick="sortTable(1)">Name</th>
 		</tr>
-  </thead>
+  	</thead>
 		<tbody id="table">
 		</tbody>
 	</table>
@@ -72,29 +72,13 @@ function myFunction() {
 
 <script>
 function myFunction2() {
-  const loc=[
-		{id:"H1", name:"Gloucester Road eastbound near the Revenue Tower", latitude: 22.279311622, longitude: 114.172101664},
-		{id:"H2", name:"Canal Road Flyover northbound near exit of Aberdeen Tunnel", latitude: 22.271587756, longitude: 114.180185283},
-		{id:"H3", name:"Island Eastern Corridor westbound near City Garden", latitude: 22.292018819, longitude: 114.193869616},
-		{id:"H11", name:"Island Eastern Corridor westbound near Lei King Wan", latitude: 22.285235888, longitude: 114.221346549},
-		{id:"K01", name:"Ferry Street southbound near Charming Gardena", latitude: 22.315044916, longitude: 114.166786346},
-		{id:"K02", name:"Gascoigne Road eastbound near the Hong Kong Polytechnic University", latitude: 22.305896494, longitude: 114.178474746},
-		{id:"K03", name:"Waterloo Road southbound near Kowloon Hospital", latitude: 22.324182195, longitude: 114.178378266},
-		{id:"K04", name:"Princess Margaret Road southbound near Oi Man Estate", latitude: 22.31331063, longitude: 114.176931903},
-		{id:"K05", name:"Kai Fuk Road northbound near the petrol stations", latitude: 22.319902728, longitude: 114.206732056},
-		{id:"K06", name:"Chatham Road North southbound near Fat Kwong Street Playground", latitude: 22.309177485, longitude: 114.184084134},
-		{id:"SJ1", name:"Tai Po Road – Sha Tin near the Racecourse", latitude: 22.404797024, longitude: 114.20734796},
-		{id:"SJ2", name:"Tate’s Cairn Highway near Shek Mun", latitude: 22.389757785, longitude: 114.210593926},
-		{id:"SJ3", name:"Tolo Highway near Science Park", latitude: 22.426975789, longitude: 114.206972621},
-		{id:"SJ4", name:"San Tin Highway near Pok Wai Road", latitude: 22.464106829, longitude: 114.053710459},
-		{id:"SJ5", name:"Tuen Mun Road near Tuen Mun Heung Sze Wui Road", latitude: 22.401075772, longitude: 113.97722659},
-	];
+  const loc=<%= info %>;
   var table = document.getElementById("table");
   for (i = 0; i < loc.length; i++) {
     var row = table.insertRow(-1);
     var cell1 = row.insertCell(0);
     var cell2 = row.insertCell(1);
-    cell1.innerHTML = '<a href="/place/loc[i].id">'+loc[i].id+'</a>';
+    cell1.innerHTML = '<a href="/place/<%= info[i].id %>">'+loc[i].id+'</a>';
     cell2.innerHTML = loc[i].name;
   	}
 }
@@ -143,23 +127,7 @@ function sortTable(n) {
 
 <script>
 function myMap() {
-	const loc=[
-		{id:"H1", name:"Gloucester Road eastbound near the Revenue Tower", latitude: 22.279311622, longitude: 114.172101664},
-		{id:"H2", name:"Canal Road Flyover northbound near exit of Aberdeen Tunnel", latitude: 22.271587756, longitude: 114.180185283},
-		{id:"H3", name:"Island Eastern Corridor westbound near City Garden", latitude: 22.292018819, longitude: 114.193869616},
-		{id:"H11", name:"Island Eastern Corridor westbound near Lei King Wan", latitude: 22.285235888, longitude: 114.221346549},
-		{id:"K01", name:"Ferry Street southbound near Charming Gardena", latitude: 22.315044916, longitude: 114.166786346},
-		{id:"K02", name:"Gascoigne Road eastbound near the Hong Kong Polytechnic University", latitude: 22.305896494, longitude: 114.178474746},
-		{id:"K03", name:"Waterloo Road southbound near Kowloon Hospital", latitude: 22.324182195, longitude: 114.178378266},
-		{id:"K04", name:"Princess Margaret Road southbound near Oi Man Estate", latitude: 22.31331063, longitude: 114.176931903},
-		{id:"K05", name:"Kai Fuk Road northbound near the petrol stations", latitude: 22.319902728, longitude: 114.206732056},
-		{id:"K06", name:"Chatham Road North southbound near Fat Kwong Street Playground", latitude: 22.309177485, longitude: 114.184084134},
-		{id:"SJ1", name:"Tai Po Road – Sha Tin near the Racecourse", latitude: 22.404797024, longitude: 114.20734796},
-		{id:"SJ2", name:"Tate’s Cairn Highway near Shek Mun", latitude: 22.389757785, longitude: 114.210593926},
-		{id:"SJ3", name:"Tolo Highway near Science Park", latitude: 22.426975789, longitude: 114.206972621},
-		{id:"SJ4", name:"San Tin Highway near Pok Wai Road", latitude: 22.464106829, longitude: 114.053710459},
-		{id:"SJ5", name:"Tuen Mun Road near Tuen Mun Heung Sze Wui Road", latitude: 22.401075772, longitude: 113.97722659},
-	];
+	const loc=<%= info %>;
 
 var mapProp= {
   center:new google.maps.LatLng(22.372935201648193, 114.10717685461066),
@@ -178,7 +146,7 @@ for (i = 0; i < loc.length; i++) {
 
 	google.maps.event.addListener(marker, 'click', (function(marker, i) {
 		return function() {
-			infowindow.setContent(loc[i].id+'<br>'+loc[i].name+'<br><a href="/place/loc[i].id">show details</a>');
+			infowindow.setContent(loc[i].id+'<br>'+loc[i].name+'<br><a href="/place/<%= info[i].id %>>show details</a>');
 			infowindow.open(map, marker);
 		}
 	})(marker, i));
