--- a/views/favPlace.ejs
+++ b/views/favPlace.ejs
@@ -16,7 +16,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top my-sm-3">
         <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link">Hello, <%= user.username %></a></li>
+            <li class="nav-item"><a href="/home" class="nav-link">Hello, <%= user.username %></a></li>
             <li class="nav-item"><a href="/fav" class="nav-link text-success">Favourite List</a></li>
             <li class="nav-item"><a href="/logout" class="nav-link text-danger">Logout</a></li>
         </ul>
@@ -37,7 +37,7 @@
             </tbody>
         </table>
     </div>
-
+    <!---
     <script>
         function myFunction() {
             const loc = [{
@@ -163,6 +163,7 @@
             }
         }
     </script>
+    --->
 
     <footer class="text-md-right text-light bg-dark p-2 mt-sm-3">
         <b>&copy; Group 2</b>
