--- a/views/favPlace.ejs
+++ b/views/favPlace.ejs
@@ -12,7 +12,7 @@
 
 </head>
 
-<body style="font-family:'Economica', sans-serif" onload="javascript:myFunction()">
+<body style="font-family:'Economica', sans-serif">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top my-sm-3">
         <ul class="navbar-nav">
@@ -29,13 +29,20 @@
     <br>
 
     <div class="container">
-        <h2 class="text-left">Places</h2>
+        <h2 class="text-left">Here are your favourite places!</h2>
+        <h4>Go to add more places if you don't have.</h4>
+        <% for (var i of fa) { %>
+        <hr>
+        <h4><%= i.place %></h4>
+        <% } %>
+        <!--
         <table id="myTable" class="table table-striped table-hover">
             <thead class="thead-dark">
             </thead>
             <tbody id="table">
             </tbody>
         </table>
+        --->
     </div>
     <!---
     <script>
