--- a/views/favPlace.ejs
+++ b/views/favPlace.ejs
@@ -9,10 +9,86 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Economica" rel="stylesheet">
+    <script>
+        function init(){
+            if(document.getElementById("H1")){
+                document.getElementById("H1").setAttribute("href","/place/H1");
+                check("H1");
+            }
+            if(document.getElementById("H2")){
+                document.getElementById("H2").setAttribute("href","/place/H2");
+                check("H2");
+            }
+            if(document.getElementById("H3")){
+                document.getElementById("H3").setAttribute("href","/place/H3");
+                check("H3");
+            }
+            if(document.getElementById("H11")){
+                document.getElementById("H11").setAttribute("href","/place/H11");
+                check("H11");
+            }
+            if(document.getElementById("K01")){
+                document.getElementById("K01").setAttribute("href","/place/K01");
+                check("K01");
+            }
+            if(document.getElementById("K02")){
+                document.getElementById("K02").setAttribute("href","/place/K02");
+                check("K02");
+            }
+            if(document.getElementById("K03")){
+                document.getElementById("K03").setAttribute("href","/place/K03");
+                check("K03");
+            }
+            if(document.getElementById("K04")){
+                document.getElementById("K04").setAttribute("href","/place/K04");
+                check("K04");
+            }
+            if(document.getElementById("K05")){
+                document.getElementById("K05").setAttribute("href","/place/K05");
+                check("K05");
+            }
+            if(document.getElementById("K06")){
+                document.getElementById("K06").setAttribute("href","/place/K06");
+                check("K06");
+            }
+            if(document.getElementById("SJ1")){
+                document.getElementById("SJ1").setAttribute("href","/place/SJ1");
+                check("SJ1");
+            }
+            if(document.getElementById("SJ2")){
+                document.getElementById("SJ2").setAttribute("href","/place/SJ2");
+                check("SJ2");
+            }
+            if(document.getElementById("SJ3")){
+                document.getElementById("SJ3").setAttribute("href","/place/SJ3");
+                check("SJ3");
+            }
+            if(document.getElementById("SJ4")){
+                document.getElementById("SJ4").setAttribute("href","/place/SJ4");
+                check("SJ4");
+            }
+            if(document.getElementById("SJ5")){
+                document.getElementById("SJ5").setAttribute("href","/place/SJ5");
+                check("SJ5");
+            }
+        }
 
+        function check(place){
+            fetch('http://csci2720-g73.cse.cuhk.edu.hk/fast/'+place,
+              { mode: 'cors',
+              method: 'GET',
+              })
+            .then((response)=>response.json())
+            .then((data)=> {
+                document.getElementById(place+"p").innerHTML=data["name"];
+                document.getElementById(place+"o").innerHTML=data["advice"];
+                document.getElementById(place+"k").innerHTML=data["fastest"];
+            });
+        }
+    </script>
 </head>
 
-<body style="font-family:'Economica', sans-serif">
+<body style="font-family:'Economica', sans-serif" onload="init();">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top my-sm-3">
         <ul class="navbar-nav">
@@ -30,10 +106,12 @@
 
     <div class="container">
         <h2 class="text-left">Here are your favourite places!</h2>
-        <h4>Go to add more places if you don't have.</h4>
+        <h4>Go to add more places if you don't have any.</h4>
         <% for (var i of fa) { %>
         <hr>
-        <h4><%= i.place %></h4>
+        <a id="<%= i.place %>"><%= i.place %></a>
+        <h2>For <i id="<%= i.place %>p"></i></h2>
+        <h3>The best path is <i id="<%= i.place %>o"></i>, the journey time is <i id="<%= i.place %>k">0</i> minutes</h3>
         <% } %>
         <!--
         <table id="myTable" class="table table-striped table-hover">
