--- a/views/favPlace.ejs
+++ b/views/favPlace.ejs
@@ -111,7 +111,7 @@
         <hr>
         <a id="<%= i.place %>"><%= i.place %></a>
         <h2>For <i id="<%= i.place %>p"></i></h2>
-        <h3>The best path is <i id="<%= i.place %>o"></i>, the journey time is <i id="<%= i.place %>k">0</i> minutes</h3>
+        <h3>The best path is <i id="<%= i.place %>o"></i>, the journey time is <i id="<%= i.place %>k">0</i> minutes.</h3>
         <% } %>
         <!--
         <table id="myTable" class="table table-striped table-hover">
