--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,4 +1,10 @@
-
+<!--
+Chan Hon Fung  1155124829
+Liu Kam Nam    1155109652
+Lai Chun Hei   1155143433
+Au Chun Hei    1155125607
+Shea Wing Tung 1155126215
+-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
